<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ascend.wangfeng.scorekeeper.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/football_match"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/team_red"
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/title"
        android:layout_marginRight="32dp"
        />

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_black"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintLeft_toRightOf="@+id/title"
        android:layout_marginLeft="32dp"/>

    <TextView
        android:id="@+id/a_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00"
        android:textColor="@android:color/holo_red_light"
        android:textSize="56sp"
        android:layout_marginRight="-13dp"
        app:layout_constraintRight_toRightOf="@+id/a"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/a"/>

    <TextView
        android:id="@+id/b_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00"
        android:textColor="@android:color/black"
        android:textSize="56sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/b"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/b"/>

    <TextView
        android:id="@+id/a_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="00"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/a_score"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/a_score"/>

    <TextView
        android:id="@+id/b_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/b_score"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/b_score"/>

    <Button
        android:id="@+id/a_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/a_reduce"
        android:layout_marginRight="-8dp"
        app:layout_constraintRight_toRightOf="@+id/a_reduce"/>

    <Button
        android:id="@+id/a_reduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintRight_toLeftOf="@+id/clear"
        android:layout_marginRight="32dp"/>

    <Button
        android:id="@+id/b_reduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/reduce"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintLeft_toRightOf="@+id/clear"/>

    <Button
        android:id="@+id/b_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduce"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/b_reduce"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/b_reduce"/>

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/score_title"
        app:layout_constraintTop_toTopOf="@+id/a_score"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-9dp"
        android:text="@string/error_title"
        app:layout_constraintTop_toTopOf="@+id/a_error"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</android.support.constraint.ConstraintLayout>
